Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- fixed wrong security declaration (public) for MembershipTool.getFullnameFromId
- #1433: Migration of users and groups from UserFolderWithGroups to
  CPSUserFolder
- #1445: Provide migration of members folder content on old instances when
  upgrading to CPS3.4.0
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Add language selector on the Front page
- Front page portlets are now Custom instead of Text. They're also translatable
- Remove the option to send the password by email for joining users as it's
  useless
- #1319: disabled "private space" action
- #1390: Add user name to user_actions portlet.