@@ -27,7 +27,7 @@
  <object name="portlet_folderactions" meta_type="CPS Portlet"
     portal_type="Actions Portlet"/>
  <object name="portlet_foldercontents" meta_type="CPS Portlet"
-    portal_type="Custom Portlet"/>
+    portal_type="Navigation Portlet"/>
  <object name="portlet_language" meta_type="CPS Portlet"
     portal_type="Language Portlet"/>
  <object name="portlet_latest_published" meta_type="CPS Portlet"
