@@ -1,41 +1,62 @@
 <?xml version="1.0"?>
 <object name="portlet_foldercontents" meta_type="CPS Portlet"
-   portal_type="Custom Portlet">
+   portal_type="Navigation Portlet">
  <f id="Contributors">
-  <e v="admin"/>
+  <e v="CPS Manager Manager"/>
  </f>
  <f id="Coverage" v=""/>
- <f id="CreationDate" v="20060103165530Z"/>
- <f id="Creator" v="admin"/>
+ <f id="CreationDate" v="20060223133232Z"/>
+ <f id="Creator" v="manager"/>
  <f id="Description" v=""/>
  <f id="EffectiveDate" v=""/>
  <f id="ExpirationDate" v=""/>
  <f id="Format" v="text/html"/>
  <f id="Language" v=""/>
- <f id="ModificationDate" v="20060103165530Z"/>
+ <f id="ModificationDate" v="20060223133251Z"/>
  <f id="Relation" v=""/>
  <f id="Rights" v=""/>
  <f id="Source" v=""/>
  <f id="Subject"/>
  <f id="Title" v="Folder contents"/>
  <f id="allow_discussion" v="False"/>
- <f id="cache_cleanup_date" v=""/>
+ <f id="authorized_only" v="True"/>
+ <f id="cache_cleanup_date" v="0.0"/>
  <f id="cache_params"/>
  <f id="cache_timeout" v="0"/>
- <f id="custom_cache_params">
-  <e v="no-cache"/>
- </f>
+ <f id="context_is_portlet" v="0"/>
+ <f id="context_rpath" v=""/>
+ <f id="contextual" v="0"/>
  <f id="disable_override" v="0"/>
- <f id="identifier" v="portlet_774132495"/>
- <f id="javascript" v=""/>
- <f id="js_render_method" v=""/>
- <f id="order" v="30"/>
+ <f id="display" v="folder_contents_detailed"/>
+ <f id="display_description" v="False"/>
+ <f id="display_hidden_folders" v="False"/>
+ <f id="display_managers" v="0"/>
+ <f id="dummy" v=""/>
+ <f id="end_depth" v="0"/>
+ <f id="folder_prefixes"/>
+ <f id="identifier" v="portlet_foldercontents"/>
+ <f id="javascript" v="widget_portlet_navigation_js"/>
+ <f id="order" v="10"/>
  <f id="portlet" v=""/>
  <f id="preview"/>
  <f id="provider" v=""/>
- <f id="render_method" v="portlet_folder_contents"/>
+ <f id="rel_depth" v="0"/>
+ <f id="root_uids">
+  <e v="sections"/>
+  <e v="workspaces"/>
+ </f>
+ <f id="short_syndication_formats" v="0"/>
+ <f id="show_docs" v="0"/>
+ <f id="show_icons" v="False"/>
  <f id="slot" v="content_well"/>
  <f id="slot_override" v="0"/>
+ <f id="sort_by" v=""/>
+ <f id="sort_direction" v=""/>
+ <f id="syndication_formats">
+  <e v="rss_1_0"/>
+  <e v="rss_2_0"/>
+  <e v="atom_0_3"/>
+ </f>
  <f id="visibility_range" v="0-0"/>
  <guard groups="" permissions=""
     roles="">python: published == 'folder_view'</guard>
