@@ -11,6 +11,7 @@ Bug fixes:
   CPSUserFolder
 - #1445: Provide migration of members folder content on old instances when
   upgrading to CPS3.4.0
+- #1166: add rss and atom export in folder_view
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Add language selector on the Front page
